# projeto_fastapi_postgres_streamlit

./: README.md  pyproject.toml
backend/: schemas.py
