[tool.poetry]
name = "projeto-crud"
version = "0.1.0"
description = ""
authors = ["rafadlima <rafael.limaccont@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.34"
pydantic = {extras = ["email"], version = "^2.9.0"}
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
